Install required dependencies to patch cexts directly into testing venv